# rust-securedrop-api

./: Cargo.toml  README.md
examples/: simple.rs
src/: auth.rs  client.rs  data.rs  error.rs  lib.rs
