[package]
name = "securedrop-api"
version = "0.0.0"
authors = ["heartsucker <heartsucker@autistici.org>"]
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
name = "securedrop_api"
path = "./src/lib.rs"

[dependencies]
failure = "0.1"
oath = "0.10"
reqwest = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dev-dependencies]
env_logger = "0.5"
