[package]
name = "securedrop-api"
version = "0.0.0"
authors = ["heartsucker <heartsucker@autistici.org>"]
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
name = "securedrop_api"
path = "./src/lib.rs"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
failure = "0.1"
reqwest = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = {version = "0.6", features = ["serde"]}
